[metadata]
name = toucan_client
description = "Toucan client"
version = 0.0.2
author = "ToucanToco"
url = "https://toucantoco.com"

[options]
packages = find:
include_package_data = true
install_requires =
    pandas
    requests
    typing
    feather-format

[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
    pytest-pep8

[tool:pytest]
addopts = -v -x --cov-fail-under=100 -p no:warnings --pep8 --cov=toucan_client
