[metadata]
name = toucan_client
description = Toucan API client
author = Toucan Toco
url = https://github.com/ToucanToco/toucan-client
version = 0.0.7
license = BSD
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',

    # Pick your license as you wish (should match "license" above)
     'License :: OSI Approved :: BSD',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
],

[options]
packages = find:
install_requires =
    requests

[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
    pytest-pep8

[tool:pytest]
addopts = -v -x --cov-fail-under=100 -p no:warnings --pep8 --cov=toucan_client
pep8maxlinelength = 99
